Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66091

linker flags merging does not handle -force_load

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.5
    • 5.9, 5.10, 5.11
    • Build tools: qmake
    • None

    Description

      It it sometimes necessary to use -force_load to link in a static library, to ensure constructor functions are run, but qmake doesn't handle this when merging linker flags, resulting in stray copies of -force_load. It should behave the same as with -framework, treating -force_load and its argument as one unit. 

      The workaround of setting QMAKE_LDFLAGS instead of LIBS/LIBS_PRIVATE means the library dependency is not propagated through prls.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vestbo Tor Arne Vestbø
            vestbo Tor Arne Vestbø
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes